#2690 - Selector Outline has no rounded corners on Safari Fixes #2690

--- a/packages/survey-creator-core/src/creator-theme/button.scss
+++ b/packages/survey-creator-core/src/creator-theme/button.scss
@@ -1,6 +1,6 @@
 .svc-btn {
   &:hover {
-    outline: calcSize(0.25) solid $primary;
+    box-shadow: 0 0 0 2px $primary;
   }
   display: flex;
   align-items: center;
